--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 		<title>Alessandro Lamparelli</title>
 		<link href="./output.css" rel="stylesheet" />
 	</head>
-	<body>
+	<body class="bg-slate-100">
 		<div id="root"></div>
 	</body>
 </html>
