--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,16 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			http-equiv="Content-Security-Policy"
+			content="default-src 'self';
+           connect-src 'self' https://us-central1-blog-88107.cloudfunctions.net;
+           style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
+           style-src-elem 'self' https://cdnjs.cloudflare.com;
+           font-src 'self' https://cdnjs.cloudflare.com;
+           script-src 'self' 'unsafe-inline' 'unsafe-eval';
+           img-src 'self' data: blob:"
+		/>
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="My Development Portfolio"
